<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity">
    <EditText
            android:id="@+id/costOfService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:inputType="text"
            android:hint="@string/hint_text"
            android:textSize="24sp"
            android:autofillHints="amount"
            android:layout_marginTop="36dp">
    </EditText>

    <TextView
            android:id="@+id/service_question"
            android:text="@string/service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/costOfService"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="3dp"/>

    <RadioGroup
            android:id="@+id/tip_options"
            android:checkedButton="@id/amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/service_question"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical">

        <RadioButton
                android:id="@+id/amazing"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/amazing">
        </RadioButton>

        <RadioButton
                android:id="@+id/good"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/good">
        </RadioButton>

        <RadioButton
                android:id="@+id/okay"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/okay">
        </RadioButton>
    </RadioGroup>

    <Switch
            android:id="@+id/round_up_switch"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/tip_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tip_options"
            app:layout_constraintTop_toBottomOf="@id/tip_options"
            android:layout_marginTop="10dp" tools:ignore="UseSwitchCompatOrMaterialXml,VisualLintButtonSize">
    </Switch>

    <Button
            android:id="@+id/calculateButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
            android:layout_marginTop="10dp"
            android:background="@drawable/calculate_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" tools:ignore="VisualLintButtonSize">
    </Button>

    <TextView
            android:id="@+id/tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/calculateButton"
            android:layout_marginTop="10dp"
            android:text="@string/tip_result">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>